--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,208 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*-----------------RESPONSIVE*/
+/*-----------------LAYOUT*/
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: 'Poppins', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.LettersWrapp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2%;
 }
+
+.Letters {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 30%;
+}
+
+.Letter {
+  background-color: #3ea9e3;
+  color: white;
+  padding: 1.5%;
+  margin: 3px;
+  width: 3.5%;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.Letter:hover {
+  background-color: #59b9ec;
+  cursor: pointer;
+}
+
+.LettersTransform {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  cursor: pointer;
+}
+
+.LeaderBoard {
+  width: 8%;
+  border: 1px solid black;
+  padding: 0.5% 1%;
+  margin: auto;
+  margin-top: 2%;
+  text-align: center;
+}
+
+.LeaderBoard > div {
+  margin: 8% 0%;
+}
+
+.Backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #00000091;
+  top: 0;
+}
+
+.Modal {
+  position: fixed;
+  z-index: 9;
+  background: white;
+  border: 1px solid #e7e2e2;
+  padding: 1%;
+  left: 42%;
+  top: 20%;
+  width: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  max-height: 35%;
+  overflow: auto;
+}
+
+.Modal button {
+  margin-top: 5%;
+}
+
+.Modal input {
+  outline: none;
+  padding: 1.5% 3%;
+  margin-top: 5%;
+}
+
+.StartBtn {
+  padding: 10px 20px;
+  background: #2da036;
+  border: 1px solid #2da036;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  color: white;
+}
+
+.StartBtn:hover {
+  background: #43bb4d;
+  cursor: pointer;
+}
+
+.TotalScore {
+  margin: 3% 0%;
+  padding: 4%;
+  border: 1px solid red;
+}
+
+.GuessLines {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 70%;
+  margin: auto;
+}
+
+.WordChar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0px 3px;
+  margin-top: 1%;
+}
+
+.Char {
+  text-align: center;
+  height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.CharWrapp {
+  margin: 0px 2px;
+}
+
+.CharLine {
+  height: 2px;
+  background-color: black;
+  width: 25px;
+}
+
+.CharSpace {
+  margin: 0px 8px;
+}
+
+.RestartBtn {
+  padding: 10px 20px;
+  background: #da3131;
+  border: 1px solid #da3131;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  color: white;
+  margin-top: 2%;
+}
+
+.RestartBtn:hover {
+  background: #eb3e3e;
+  cursor: pointer;
+}
+/*# sourceMappingURL=index.css.map */
